--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,57 @@
+#ACTIVE PROFILE
+spring.profiles.active=dev
+
+#CONTEXT SETTINGS
+server.servlet.context-path=/api/v1
+server.port=8088
+
+##----------LOGGIN---------
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
+
+# For Jackson Serialization
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+
+#OPENAPI SETTINGS
+module.name=ecommerce
+api.version=1.0
+#springdoc.show-actuator =true
+#springdoc.writer-with-default-pretty-printer = true
+springdoc.swagger-ui.operationsSorter=method
+#springdoc.show-login-endpoint=true
+#springdoc.pre-loading-active =true
+springdoc.swagger-ui.path =/swagger-ui.html
+springdoc.swagger-ui.filter=true
+#springdoc.swagger-ui.displayRequestDuration=true
+#springdoc.swagger-ui.showCommonExtensions=true
+#springdoc.swagger-ui.showExtensions = true
+springdoc.swagger-ui.persistAuthorization=true
+springdoc.swagger-ui.displayOperationId=true
+springdoc.packages-to-exclude = com.uc.ecommerce.model.entity
+#springdoc.api-docs.resolve-schema-properties=true
+#springdoc.default-flat-paramObject=true
+springdoc.writer-with-order-by-keys=true
+#springdoc.swagger-ui.defaultModelsExpandDepth = -1
+
+#Duration Config
+spring.jackson.serialization.write-durations-as-timestamps=false
+
+#UTF-8
+spring.messages.encoding=UTF-8
+
+
+#DB GENERAL
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform= org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=CHAR
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+
+#----------------FILE--------------
+server.servlet.session.tracking-modes=cookie
+spring.servlet.multipart.enabled=true
 
