rsql added and redis added

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -27,3 +27,8 @@ logging.level.com.uc.ecommerce=DEBUG
 
 #APP
 app.base.url=http://localhost:8088/api/v1
+
+#REDIS
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
