--- a/backend/docker/docker-compose-prod.yml
+++ b/backend/docker/docker-compose-prod.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+name: ecommerce-prod-container
 services:
   mysqldb:
     image: mysql:latest
@@ -14,9 +14,10 @@ services:
       - '3306'
     volumes:
       - my-db:/var/lib/mysql
-
   cache:
     image: 'bitnami/redis:latest'
+    networks:
+      - ecommerce
     ports:
       - "6379:6379"
     environment:
@@ -24,6 +25,8 @@ services:
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
   zookeeper:
     image: confluentinc/cp-zookeeper:7.0.1
+    networks:
+      - ecommerce
     container_name: zookeeper
     ports:
       - "2181:2181"
@@ -32,6 +35,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
   broker:
     image: confluentinc/cp-kafka:7.0.1
+    networks:
+      - ecommerce
     container_name: broker
     ports:
       - "9092:9092"
