--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -1,3 +1,11 @@
+#CONTEXT SETTINGS
+server.servlet.context-path=${ROOT_PATH:/api/v1}
+server.port=${SERVER_PORT:8088}
+
+
+#DOCKER
+spring.docker.compose.file = ./docker/docker-compose-test.yml
+spring.docker.compose.skip.in-tests=false
 #DB CONNECTION
 spring.datasource.url =jdbc:mariadb://localhost:3306/ecommerce-test?createDatabaseIfNotExist=true
 spring.datasource.username =root
