--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -6,6 +6,7 @@ server.port=${SERVER_PORT:8088}
 #DOCKER
 spring.docker.compose.file = ./docker/docker-compose-test.yml
 spring.docker.compose.skip.in-tests=false
+spring.docker.compose.lifecycle-management=start-only
 #DB CONNECTION
 spring.datasource.url =jdbc:mariadb://localhost:3306/ecommerce-test?createDatabaseIfNotExist=true
 spring.datasource.username =root
