--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -24,7 +24,7 @@ ecommerce.mail.to.appEmail=apahudai688@gmail.com
 ecommerce.mail.from.appEmail=apahudai688@gmail.com
 
 #HIBERNATE SETTINGS
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 
 #LOGGING
